tests/paczka1/small_fuzzy/66728471.err
Error in line 3: A359 A359 5,2
Error in line 11: 82r Ah59 15,9
Error in line 7: pYU7p9v S209 27,2
Error in line 14: f96c S209 43,4
